--- a/site/assets/src/scss/utilities/spacing.scss
+++ b/site/assets/src/scss/utilities/spacing.scss
@@ -42,11 +42,21 @@
     padding-top: spacing(4);
 }
 .ps-2 {
-    padding-left: spacing(2);
+    :not([dir="rtl"]) & {
+        padding-left: spacing(2);
+    }
 
     [dir="rtl"] & {
-        padding-left: unset;
         padding-right: spacing(2);
+    }
+}
+.ps-0 {
+    :not([dir="rtl"]) & {
+        padding-left: spacing(0);
+    }
+
+    [dir="rtl"] & {
+        padding-right: spacing(0);
     }
 }
 
